# token-diet

./: .gitignore  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  publish.yml
examples/: basic_agent.py  wrapped_client_example.py
tests/: test_cache.py  test_compressors.py  test_proxy.py
token_diet/: __init__.py  cache.py  cli.py  client.py  compressors.py  proxy.py
