[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "token-diet"
version = "0.1.0"
authors = [
    { name = "mscharan-analytics" }
]
description = "A lightweight, production-ready context-compression (CCR) toolkit for LLM agents"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.16.0"]
openai = ["openai>=1.0.0"]
proxy = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "httpx>=0.24.0"
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0"
]

[project.scripts]
token-diet = "token_diet.cli:main"

[tool.setuptools.packages.find]
include = ["token_diet*"]

# Ruff Linter & Formatter Configuration
[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade (enforces modern python syntax)
]
ignore = []

# MyPy Type Safety Configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "examples.*"
]
disallow_untyped_defs = false
disallow_incomplete_defs = false
